<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.0.RELEASE</version>
        <relativePath/>
    </parent>

    <groupId>no.nav</groupId>
    <artifactId>veilarboppfolging</artifactId>
    <version>1</version>
    <name>veilarboppfolging</name>
    <description>Backend applikasjon for domenet arbeidsrettet oppfølging</description>

    <properties>
        <java.version>11</java.version>
        <common.version>2.2020.08.06_11.28-05c901c817c2</common.version>
        <springfox.version>2.9.2</springfox.version>
        <tjenestespesifikasjoner.version>1.2019.04.03-23.09-56488320520a</tjenestespesifikasjoner.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
        <finalName>veilarboppfolging</finalName>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>2.8.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>3.14.7</version>
        </dependency>
        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>0.10.3</version>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-registry-prometheus</artifactId>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>${springfox.version}</version>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger-ui</artifactId>
            <version>${springfox.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Database -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>3.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
            <version>4.0.3</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.ojdbc</groupId>
            <artifactId>ojdbc8</artifactId>
            <version>19.3.0.0</version>
        </dependency>

        <!--  Overskriv gammel avhengighet fra nimbus -->
        <dependency>
            <groupId>net.minidev</groupId>
            <artifactId>json-smart</artifactId>
            <version>2.3</version>
        </dependency>

        <!-- Tjenestespesifikasjoner -->
        <dependency>
            <groupId>no.nav.tjenestespesifikasjoner</groupId>
            <artifactId>nav-fim-oppfoelging-v1.2.0-tjenestespesifikasjon</artifactId>
            <version>${tjenestespesifikasjoner.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.tjenestespesifikasjoner</groupId>
            <artifactId>ytelseskontrakt-v3-tjenestespesifikasjon</artifactId>
            <version>${tjenestespesifikasjoner.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.tjenestespesifikasjoner</groupId>
            <artifactId>nav-behandleArbeidssoeker-v1-tjenestespesifikasjon</artifactId>
            <version>${tjenestespesifikasjoner.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.tjenestespesifikasjoner</groupId>
            <artifactId>varseloppgave-v1-tjenestespesifikasjon</artifactId>
            <version>${tjenestespesifikasjoner.version}</version>
        </dependency>

        <!-- Common Dependencies -->
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>cxf</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>feature-toggle</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>leader-election</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>util</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>types</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>abac</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>client</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>sts</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>auth</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>log</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>health</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>no.nav.common</groupId>
            <artifactId>metrics</artifactId>
            <version>${common.version}</version>
        </dependency>

        <!-- test -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.4.200</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <version>1.12.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock-standalone</artifactId>
            <version>2.26.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
